--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
-
+h1 {
+    font-family: sans-serif;
+    font-size: 25em;
+}
+p {
+    font-family: sans-serif;
+}
+@keyframes colorchange {
+        0% {
+          background: red;
+        }
+        12.5% {
+          background: orange;
+        }
+        25% {
+          background: yellow;
+        }
+        37.5% {
+          background: green;
+        }
+        50%{
+          background: cyan;
+        }
+        62.5% {
+          background: blue;
+        }
+        75% {
+          background: purple;
+        }
+        87.5% {
+          background: fuchsia;
+        }
+        100% {
+          background: red;
+        }
+}
